@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-12T16:12:25Z",
+  "timestamp" : "2023-10-13T00:43:24Z",
   "count_outdated" : 1779,
   "uniques_outdated" : 611,
-  "count" : 1840,
-  "uniques" : 629,
+  "count" : 1841,
+  "uniques" : 630,
   "views" : [
     {
       "timestamp": "2023-09-30T00:00:00Z",
@@ -88,12 +88,12 @@
     },
     {
       "timestamp": "2023-10-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
