@@ -1,6 +1,6 @@
 {
-  "count": 61,
-  "uniques": 18,
+  "count": 62,
+  "uniques": 19,
   "views": [
     {
       "timestamp": "2023-09-30T00:00:00Z",
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2023-10-12T00:00:00Z",
-      "count": 2,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
