@@ -1,3 +1,12 @@
+2023-10-13T00:43:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6502542690 # 1981
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-13
+* notice: last 14d: unq all: 19 62
+* notice: prev accum: outdated-unq outdated-all / unq all: 611 1779 / 629 1840
+* notice: next accum: outdated-unq outdated-all / unq all: 611 1779 / 630 1841
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2023-10-12]
+
 2023-10-12T16:12:25Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6498199313 # 1980
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-12
